--- a/CustomTransitions/CustomTransitions/Base.lproj/Main.storyboard
+++ b/CustomTransitions/CustomTransitions/Base.lproj/Main.storyboard
@@ -154,7 +154,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.45085787770000002" green="0.98829740290000001" blue="0.83763033149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.1857388616" blue="0.57339501380000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="RJ0-s7-HtR" firstAttribute="centerY" secondItem="AmL-aN-YOS" secondAttribute="centerY" id="6Q9-hq-vCh"/>
                             <constraint firstItem="K5M-mf-L8g" firstAttribute="top" secondItem="RJ0-s7-HtR" secondAttribute="bottom" constant="50" id="Clr-BF-ZHc"/>
@@ -236,7 +236,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="UbE-j4-zSl" firstAttribute="top" secondItem="2jb-zF-Dae" secondAttribute="bottom" constant="60" id="Fmw-r3-aAi"/>
                             <constraint firstItem="2jb-zF-Dae" firstAttribute="centerX" secondItem="sdj-sO-Ult" secondAttribute="centerX" id="Ms3-Lf-jmk"/>
