--- a/CustomTransitions/CustomTransitions/Base.lproj/Main.storyboard
+++ b/CustomTransitions/CustomTransitions/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kHv-S0-TmL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kHv-S0-TmL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -169,6 +169,47 @@
             </objects>
             <point key="canvasLocation" x="788" y="706"/>
         </scene>
+        <!--Nav Interactive TransitionA View Controller-->
+        <scene sceneID="GNj-6B-ump">
+            <objects>
+                <viewController storyboardIdentifier="NavInteractiveTransitionAViewController" id="68X-Fk-lDT" customClass="NavInteractiveTransitionAViewController" customModule="CustomTransitions" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CSi-X3-RQ5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEV-UT-b1a">
+                                <rect key="frame" x="168" y="297.5" width="38.5" height="72"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="egj-aA-haQ">
+                                <rect key="frame" x="157.5" y="419.5" width="60" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="6Hj-6a-up8"/>
+                                    <constraint firstAttribute="height" constant="44" id="Aq5-0F-TMC"/>
+                                </constraints>
+                                <state key="normal" title="present"/>
+                                <connections>
+                                    <action selector="presentButtonPressed:" destination="68X-Fk-lDT" eventType="touchUpInside" id="lxz-po-cUC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="hEV-UT-b1a" firstAttribute="centerX" secondItem="CSi-X3-RQ5" secondAttribute="centerX" id="4U4-Ow-kbD"/>
+                            <constraint firstItem="egj-aA-haQ" firstAttribute="centerX" secondItem="CSi-X3-RQ5" secondAttribute="centerX" id="R6w-22-NUw"/>
+                            <constraint firstItem="hEV-UT-b1a" firstAttribute="centerY" secondItem="CSi-X3-RQ5" secondAttribute="centerY" id="SbO-Ce-iy8"/>
+                            <constraint firstItem="egj-aA-haQ" firstAttribute="top" secondItem="hEV-UT-b1a" secondAttribute="bottom" constant="50" id="ZoC-h8-fun"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Rn9-Sz-plV"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zYj-ze-UPX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="788" y="1390"/>
+        </scene>
         <!--Normal TransitionB View Controller-->
         <scene sceneID="w7A-nQ-fUn">
             <objects>
@@ -250,6 +291,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f4O-R6-HbA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1508" y="706"/>
+        </scene>
+        <!--Nav Interactive TransitionB View Controller-->
+        <scene sceneID="Ud1-sC-pID">
+            <objects>
+                <viewController storyboardIdentifier="NavInteractiveTransitionBViewController" id="Ma5-nk-Hn6" customClass="NavInteractiveTransitionBViewController" customModule="CustomTransitions" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dwk-yS-M5l">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rwn-Qb-0Uo">
+                                <rect key="frame" x="169" y="297.5" width="37" height="72"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H0c-ta-Zkd">
+                                <rect key="frame" x="157.5" y="429.5" width="60" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="FUC-GU-Ua5"/>
+                                    <constraint firstAttribute="width" constant="60" id="gnK-Xt-7YI"/>
+                                </constraints>
+                                <state key="normal" title="dismiss"/>
+                                <connections>
+                                    <action selector="dismissButtonPressed:" destination="Ma5-nk-Hn6" eventType="touchUpInside" id="IiK-bR-IWi"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.58105844259999995" green="0.12855249639999999" blue="0.57453137639999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Rwn-Qb-0Uo" firstAttribute="centerY" secondItem="dwk-yS-M5l" secondAttribute="centerY" id="CVw-5a-DIX"/>
+                            <constraint firstItem="Rwn-Qb-0Uo" firstAttribute="centerX" secondItem="dwk-yS-M5l" secondAttribute="centerX" id="F5H-hm-lt2"/>
+                            <constraint firstItem="H0c-ta-Zkd" firstAttribute="top" secondItem="Rwn-Qb-0Uo" secondAttribute="bottom" constant="60" id="a8p-o2-WEC"/>
+                            <constraint firstItem="H0c-ta-Zkd" firstAttribute="centerX" secondItem="dwk-yS-M5l" secondAttribute="centerX" id="kc7-3d-Qxx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LCo-86-FQc"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XD1-DL-MHH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1508" y="1389"/>
         </scene>
     </scenes>
 </document>
